--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row">
-                  <div class="col-lg-6 col-sm-12 justify-content-between slika">
+                  <div class="col-lg-6 justify-content-between slika">
                   <img src="assets/img/team/tamara-bellis-pNKvgaBfJio-unsplash.jpg" class="testimonial-img" alt="">
                   <h3>Tamara Bellis</h3>
                 </div>
-                <div class="col-lg-6 col-sm-12 justify-content-between slika">
+                <div class="col-lg-6 justify-content-between slika">
                   <img src="assets/img/team/alexandru-zdrobau-BGz8vO3pK8k-unsplash.jpg" class="testimonial-img" alt="">
                   <h3>Alexandru Zdrobau</h3>
                 </div>
